--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
                     <span id="zroom-scroll-post-word" class=" scrolling-text">future words</span>
                 </div>
             </div>
-            <textarea class="zroom-area" id="zroom-paste" onkeyup="countWords()">This is a sample section of text, to test the string processing of zroom-it. It contains lots of different symbols; like commas, semicolons, and returns/newlines.
-                "A failed test is a successful check!" ~Sean's test quote 
-            </textarea>
+            <textarea class="zroom-area" id="zroom-paste" onkeyup="countWords()">Sometimes it just doesn't make sense. The man walking down the street in a banana suit. The llama standing in the middle of the road. The fairies dancing in front of the car window. The fact that all of this was actually happening and wasn't a dream. The trees, therefore, must be such old and primitive techniques that they thought nothing of them, deeming them so inconsequential that even savages like us would know of them and not be suspicious. At that, they probably didn't have too much time after they detected us orbiting and intending to land. And if that were true, there could be only one place where their civilization was hidden. She had been told time and time again that the most important steps were the first and the last. It was something that she carried within her in everything she did, but then he showed up and disrupted everything. He told her that she had it wrong. The first step wasn't the most important. The last step wasn't the most important. It was the next step that was the most important. MaryLou wore the tiara with pride. There was something that made doing anything she didn't really want to do a bit easier when she wore it. She really didn't care what those staring through the window were thinking as she vacuumed her apartment.</textarea>
             <div>
                 <label>Word Count: <span id="word-count">0 (0 Seconds)</span></label><br/>
                 <label">Time Remaining: <span id="read-time-remaining">(0 Seconds)</span></label>
